[gd_scene load_steps=6 format=3 uid="uid://crks5hss1c4gv"]

[ext_resource type="Script" path="res://scripts/Plane/DangerPlaes.gd" id="1_7gumo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kkpco"]
albedo_color = Color(1, 0.164706, 0.203922, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kbu75"]
material = SubResource("StandardMaterial3D_kkpco")
size = Vector3(1, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_rwu6c"]
size = Vector3(1, 1, 0.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_d75oq"]
size = Vector3(1, 1, 0.1)

[node name="DangerPlane" type="StaticBody3D"]
script = ExtResource("1_7gumo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_kbu75")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_rwu6c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_d75oq")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
